--- a/src/compoments/Header/header.css
+++ b/src/compoments/Header/header.css
@@ -6,6 +6,21 @@ header{
     background-color: #212428;
     align-items: center;
     justify-content: space-around;
+    transition: all 1s;
+    position: relative;
+    top: 0;
+    z-index: 3;
+}
+
+.header-scroll{
+    position: fixed;
+    width: 100%;
+    z-index: 2;
+    background: rgba(33, 36, 40, 0.8705882353);
+    height: 15vh;
+    box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
+    top: 0;
+    backdrop-filter: blur(15px);
 }
 header .avt{
     width: 10%;
@@ -43,4 +58,28 @@ header  nav ul li:hover a{
 .active-page{
     color: #ffffff !important;
     font-weight: bold;
+}
+
+#btn-menu{
+    color: #ff014f;
+    font-size: 3rem;
+    display: none;
+    cursor: pointer;
+}
+#btn-close{
+    color: #ffffff;
+    font-size: 3rem;
+    cursor: pointer;
+    display: none;
+}
+#block{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: #1c1e22;
+    opacity: 0.9;
+    transform: translateX(-100%);
+    transition: all 1s;
 }
