--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,7 @@
 html{
     font-size: 62.5%;
     font-family: 'Quicksand', sans-serif;
+    scroll-behavior: smooth;
 }
 body{
     background-color: #212428;
