--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,15 @@ ul{
 }
 a{
     text-decoration: none;
+    color: #c4cfde;
 }
 .container{
     overflow: hidden;
+}
+::selection{
+    color: #ff014f;
+}
+hr{
+    border: 0.1px solid #121415;
+    margin: 2rem 0;
 }
