--- a/src/compoments/Projects/myProject.css
+++ b/src/compoments/Projects/myProject.css
@@ -16,7 +16,7 @@
 .list-projects ul{
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     margin: 5rem 10rem 0 10rem;
     flex-wrap: wrap;
 }
@@ -24,7 +24,7 @@
     width: 30rem;
     border-radius: 2rem;
     padding: 2rem;
-    margin: 2rem;
+    margin: 3rem;
     transition: all 0.4s;
     background:  linear-gradient(145deg, #1e2024, #23272b);
     box-shadow: 10px 10px 19px #1c1e22, -10px -10px 19px #262a2e;
